<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VerbeetenApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_back">Back</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_busy">Busy</string>
    <string name="action_refresh">Refresh</string>
    <string name="loading">Processing...</string>
    <string name="action_news">News</string>
    <string name="action_notes">Notes</string>
    <string name="action_agenda">Agenda</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="id">Id</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="person">Person</string>
    <string name="noteDescription">Give note description</string>
    <string name="noteDate">Give note date dd-mm-yyyy</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="check">Check</string>

    <string name="title_activity_bar_code">BarCodeActivity</string>

</resources>