<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_menu_back"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/action_back"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_busy"
        android:actionLayout="@layout/progressbar"
        android:orderInCategory="500"
        android:showAsAction="always"
        android:title="@string/action_busy"/>

</menu>